Fixed an overlapping issue on the packet card title

--- a/app/assets/stylesheets/pages/_packets_card.scss
+++ b/app/assets/stylesheets/pages/_packets_card.scss
@@ -38,6 +38,7 @@ a {
   height: 1.6rem;
   margin-bottom: 1rem !important;
   margin-top: 3rem;
+  margin-left: 0;
   // position: relative;
   // z-index: 1;
   
